# POC

./: .gitignore  CMakeLists.txt  main.cpp  sy2.txt
al/: Palindromic.cpp  bank.cpp  dp2.cpp  glz.cpp  jiege.cpp  os_bank.cpp  process.cpp  sy5_self.cpp  tx.cpp  wat.cpp
include/: grammar_2.h  lexical_1.h
sy1/: 1.txt  lexical_analysis.cpp  test.txt
sy2/: grammar_2.h  grammar_parser.cpp
sy3/: 1.txt  grammar_2.h  operator_precedence_grammar.cpp
